Enhance Boxes component with adjustable speed and touch movement; fix ContactButton prop types formatting; update Contact.scss for improved layout alignment and spacing.

--- a/src/Components/Common/common.scss
+++ b/src/Components/Common/common.scss
@@ -202,6 +202,7 @@
     background-color: #070E14;
     position: unset;
     justify-items: center;
+    place-items: center;
 
     svg.svg-large{
       display: block;
